--- a/ECO.Api.EnvioCorreos/ECO.Api.EnvioCorreos.csproj
+++ b/ECO.Api.EnvioCorreos/ECO.Api.EnvioCorreos.csproj
@@ -23,8 +23,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ECO.Aplicacion\ECO.Aplicacion.csproj" />
     <ProjectReference Include="..\ECO.Dto\ECO.Dtos.csproj" />
-    <ProjectReference Include="..\ECO.Servicio\ECO.Servicio.csproj" />
   </ItemGroup>
 
 </Project>
